tdf#156211: Don’t round Kashida width when doing subpixel positioning

This improves our calculated positions for the inserted Kashida glyphs,
which has the side effect of fixing this issue, and generally improves
Kashida positions so that there is less rounding errors and visible gaps
between them.

Change-Id: If60126e77e59c2c1246298e2993609547d38c79c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154550
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>